wallet balances swagger
